--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <meta charset="UTF-8">
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mr. Spy</title>
+  <title>SignalCheck</title>
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -173,7 +173,7 @@
 
   <!-- CABEÇALHO -->
   <div class="wrapper">
-    <div class="logo"><img src="images/logo.webp" alt="MR. SPY Logo"></div>
+    <div class="logo"><img src="images/signalchecklogo.png" alt="SignalCheck Logo"></div>
     <h2>Worried about hidden secrets?</h2>
     <div class="bold-line">Get the clarity you deserve now.</div>
 
@@ -468,7 +468,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 
 <footer>
-   2025 Mr.Spy APP Version 2.0 |
+   2025 SignalCheck APP Version 2.0 |
   <a href="#">Terms of use</a> |
   <a href="#">Privacy policy</a>
 </footer>
