--- a/pt2.html
+++ b/pt2.html
@@ -351,7 +351,8 @@
         .then(r => r.json())
         .then(data => {
           if (data.results && data.results.length > 0) {
-            moteisProximos = data.results.map(motel => motel.name);
+            // Limita para no máximo 5 motéis
+            moteisProximos = data.results.slice(0, 5).map(motel => motel.name);
             // Se a animação já começou e ainda não exibiu nenhum motel, força a exibição do primeiro
             if (animStarted && moteisProximos.length > 0 && lugaresAnim.length === 0) {
               lugaresAnim.push(moteisProximos[0]);
