--- a/pt2.html
+++ b/pt2.html
@@ -156,9 +156,13 @@
 
     <p class="subhead" id="subhead">Watch the video below to understand how our advanced app works.</p>
     
-    <div style="margin: 30px auto;">
-    <div id="vid_6856628d816c90126b9a8b54" style="position: relative; width: 100%; padding: 133.33333333333331% 0 0;"> <img id="thumb_6856628d816c90126b9a8b54" src="images/thumbnail.jpg" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; display: block;" alt="thumbnail"> <div id="backdrop_6856628d816c90126b9a8b54" style=" -webkit-backdrop-filter: blur(5px); backdrop-filter: blur(5px); position: absolute; top: 0; height: 100%; width: 100%; "></div> </div> <script type="text/javascript" id="scr_6856628d816c90126b9a8b54"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/56837729-5280-4872-bc4c-25690cc5693d/players/6856628d816c90126b9a8b54/player.js", s.async=!0,document.head.appendChild(s); </script>
+    <style>.vslplay-show{display: none !important;}</style>
+    <div style="width:100%;max-width:360px;margin:auto">
+     <div style="position:relative;width:100%;overflow:hidden;padding-top:177.7%;transition:0.25s;" data-vslplay="6d5d85c2-6739-4db1-9ce6-b49ef851a5a7">
+       <iframe style="position:absolute;top:0;left:0;bottom:0;right:0;width:100%;height:100%" src="https://iframe.vslplay.com/6d5d85c2-6739-4db1-9ce6-b49ef851a5a7" scrolling="no" frameborder="0" allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
+     </div>
     </div>
+    <script>window.addEventListener("message",(e)=>{if (e.origin === "https://iframe.vslplay.com" && e.data.from === "vslplay-player" && e.data.type === "height") {const content = document.querySelector('[data-vslplay="6d5d85c2-6739-4db1-9ce6-b49ef851a5a7"]');if(e.data.showing) {content.style.paddingTop="calc(177.7% + " + e.data.value + "px)";document.querySelectorAll(".vslplay-show").forEach((e) => e.style.setProperty("display", "block", "important"));}else{content.style.paddingTop="177.7%";document.querySelectorAll(".vslplay-show").forEach((e) => (e.style.display = "none"));}}});</script>
 
     <!-- Botão abaixo da VSL (alteração 2) -->
     <button id="video-btn" class="see-results-btn" onclick="location.href='pt3.html'">
