--- a/pt3.html
+++ b/pt3.html
@@ -271,7 +271,7 @@
       <div><span style="color:#F9082C;font-weight:900;">95% OFF</span> Today only</div>
       <div><del>$523</del> <span class="price">$9</span></div>
       <div>You’re getting a 95% discount!</div>
-      <img src="images/product.webp" alt="Product" style="margin:20px 0;max-width:100%;">
+      <img src="images/telas.png" alt="Product" style="margin:20px 0;max-width:100%;">
       <ul style="margin:15px 0;list-style:none;padding:0">
         <li>✅ 30 days warranty</li>
         <li>✅ Access for 1 year</li>
