--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <button id="choose-phone" class="btn-choose" type="button">Phone</button>
     </div>
     <div class="step">STEP TWO</div>
-    <div class="description" id="desc-instagram">Insert your partner's Instagram @ below or phone number.<br>(The system needs the Instagram @ or Phone number).</div>
+    <div class="description" id="desc-instagram">Insert your partner's Instagram @ or phone number below.<br>(The system needs the Instagram @ or Phone number).</div>
     <div class="description" id="desc-phone" style="display:none;">Insert your partner's phone number using the keypad below.</div>
     <div class="step">STEP THREE</div>
     <div class="description">Let our advanced AI system discreetly analyze all their apps, chats, messages, and media files.</div>
