--- a/pt2.html
+++ b/pt2.html
@@ -155,6 +155,7 @@
     <div id="fotoContainer"><img id="fotoperfil" src="images/perfil.jpg" alt="Profile"></div>
 
     <p class="subhead" id="subhead">Watch the video below to understand how our advanced app works.</p>
+    <div id="lugares-visitados" style="margin:18px 0 0 0;font-size:16px;"></div>
     
     <style>.vslplay-show{display: none !important;}</style>
     <div id="vsl-delay-container" style="display:none">
