--- a/pt3.html
+++ b/pt3.html
@@ -206,7 +206,12 @@
       Our data intelligence algorithm, based on words and photos,
       <strong>found suspicious messages and files...</strong>
     </div>
-    <img id="fotoperfil" src="images/perfil.jpg" class="foto-perfil" alt="Perfil">
+    <div style="background:#F9082C;color:#fff;font-size:18px;font-weight:bold;padding:16px 24px;border-radius:14px;box-shadow:0 4px 24px #f9082c55;max-width:98vw;width:auto;text-align:center;letter-spacing:0.5px;line-height:1.2;margin:24px auto 0 auto;">
+      Possible suspicious audio found on your partner’s device:<br>
+      <div id="audio-elevenlabs" style="margin-top:12px;"></div>
+      <div style="margin-top:16px;font-size:17px;font-weight:bold;color:#fff;background:#e60033;padding:10px 18px;border-radius:10px;box-shadow:0 2px 8px #e6003355;max-width:90vw;display:inline-block;">12 more audios like this found</div>
+    </div>
+    <img id="fotoperfil" src="images/semfoto.webp" class="foto-perfil" alt="Perfil">
 
     <!-- info -->
     <div class="info-line">Messages and suspicious files <strong>founded:</strong></div>
@@ -312,10 +317,16 @@
 <!-- Recuperar imagem do perfil -->
 <script>
   (function(){
-    const photo = new URLSearchParams(location.search).get("photo") || localStorage.getItem("userFoto");
-    if (photo) {
-      document.getElementById("fotoperfil").src = decodeURIComponent(photo);
+    // Prioriza userInstagramPic, depois userFoto, depois fallback
+    const igPic = localStorage.getItem('userInstagramPic');
+    const waPic = localStorage.getItem('userFoto');
+    let foto = 'images/semfoto.webp';
+    if (igPic) {
+      foto = igPic;
+    } else if (waPic) {
+      foto = waPic;
     }
+    document.getElementById('fotoperfil').src = foto;
   })();
 </script>
 
